# dive

./: .buildinfo  .gitignore  LICENSE  README.md  data.html  deerload.py  dive.py  genindex.html  index.html  models.html  multigauss.py  new.md  objects.inv  plotting.html  plotting.py  py-modindex.html  pyproject.toml  sampling.html  saving.html  search.html  searchindex.js  setup.py  usage.html  utils.html  utils.py
.doctrees/: data.doctree  environment.pickle  index.doctree  models.doctree  plotting.doctree  sampling.doctree  saving.doctree  usage.doctree  utils.doctree
.github/workflows/: publish-test.yml  publish.yml  sphinx.yml
_sources/: data.rst.txt  saving.rst.txt
data/: 3992_test_trace.nc
dive/: Testing_install.ipynb  __init__.py  constants.py  deer.py  deerload.py  models.py  multigauss.py  plotting.py  samplers.py  saving.py  test_data.py  tikmodels.py  utils.py
docs/source/: api.rst  conf.py  data.rst  dive.rst  index.rst  models.rst  modules.rst  plotting.rst  sampling.rst  usage.rst  utils.rst
examples/: howtoguide.ipynb
tests/: test-traces.py
