[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dive-EPR"
version = "0.2.1"
authors = [
  {name = "Sarah Sweger"},
  {name = "Julian Cheung", email = "julianc2477@gmail.com"},
  {name = "Lukas Zha"},
  {name = "Stephan Pribitzer", email = "stephapr@uw.edu"},
  {name = "Stefan Stoll", email = "stst@uw.edu"},
]
description = "Python package for Bayesian analysis of dipolar EPR spectroscopy data through Markov chain Monte Carlo sampling with PyMC."
readme = "README.md"
keywords = ["EPR", "DEER", "Bayesian", "MCMC"]
requires-python = ">=3.9"
dependencies = [
    "pymc>=5.10.4",
    "deerlab>=1.1.2",
    "scipy>=1.11.4",
    "matplotlib>=3.9.1",
    "numpy>=1.15.0",
    "pandas>=2.0.3",
    "mkl-service>=2.4.1",
    "h5netcdf>=1.3.0",
    "pytest>=7.4.4",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/StollLab/dive"
Documentation = "https://stolllab.github.io/dive"
